EXTRA_DIST = $(data_DATA)

datadir = $(XINE_SKINDIR)/CelomaChrome

data_DATA =                                                                                       \
	BigArrowDown.png  LettersMiddle.png   MainPlay.png	 PlBtn.png	  SkItemBtn.png   \
	BigArrowUp.png	  LettersMini.png     MainPower.png	 PlDelete.png	  SkSlidBG.png    \
	CtlBg.png	  MainAutoButton.png  MainPrev.png	 PlDeleteAll.png  SkSlidPad.png   \
	CtlBtn.png	  MainBg.png	      MainStop.png	 PlDismiss.png	  SliderHBg.png   \
	CtlDismiss.png	  MainButton.png      MainVolumeBg.png	 PlInputTxt.png   SliderHPad.png  \
	CtlSliderBg.png   MainDummy.png       MainVolumePad.png  PlItemBtn.png	  SliderVBg.png   \
	CtlSliderPad.png  MainEject.png       MrlBg.png		 PlMoveDn.png	  SliderVPad.png  \
	FsBtn.png	  MainFastB.png       MrlBtn.png	 PlMoveUp.png	  SnapBtn.png     \
	HideBtn.png	  MainFastF.png       MrlDismiss.png	 PlPlay.png	                  \
	LettersBig.png	  MainMute.png	      MrlSelect.png	 SetupBtn.png                     \
	LettersDigit.png  MainNext.png	      Onglet.png	 SkArrowDown.png                  \
	LettersGrey.png   MainPause.png       PlBg.png		 SkArrowUp.png    skinconfig


debug:
install-debug: install

mostlyclean-generic:
	-rm -f *~ \#* .*~ .\#*

maintainer-clean-generic:
	-@echo "This command is intended for maintainers to use;"
	-@echo "it deletes files that may require special tools to rebuild."
	-rm -f Makefile.in
