EXTRA_DIST = $(skins_DATA)

skinsdir = $(datadir)/xine/skins/CelomaChrome

skins_DATA =                                                                                       \
	BigArrowDown.png  LettersMiddle.png   MainPlay.png	 PlBtn.png	  SkItemBtn.png   \
	BigArrowUp.png	  LettersMini.png     MainPower.png	 PlDelete.png	  SkSlidBG.png    \
	CtlBg.png	  MainAutoButton.png  MainPrev.png	 PlDeleteAll.png  SkSlidPad.png   \
	CtlBtn.png	  MainBg.png	      MainStop.png	 PlDismiss.png	  SliderHBg.png   \
	CtlDismiss.png	  MainButton.png      MainVolumeBg.png	 PlInputTxt.png   SliderHPad.png  \
	MainDummy.png     MainVolumePad.png   PlItemBtn.png	 SliderVBg.png                    \
	MainEject.png     MrlBg.png	      PlMoveDn.png	 SliderVPad.png                   \
	FsBtn.png	  MainFastB.png       MrlBtn.png	 PlMoveUp.png	  SnapBtn.png     \
	HideBtn.png	  MainFastF.png       MrlDismiss.png	 PlPlay.png	  LettersBlue.png \
	LettersBig.png	  MainMute.png	      MrlSelect.png	 SetupBtn.png     CtlItemBtn.png  \
	LettersDigit.png  MainNext.png	      Onglet.png	 OngletSmall.png  SkArrowDown.png \
	MainPause.png     PlBg.png	      SkArrowUp.png      MainNav.png      		  \
	ArrowLeft.png	  BigArrowLeft.png    ArrowRight.png	 BigArrowRight.png		  \
	SkSlidHBg.png	  SliderHPad.png      PlSlidHBg.png      skinconfig


debug:
install-debug: install

mostlyclean-generic:
	-rm -f *~ \#* .*~ .\#*

maintainer-clean-generic:
	-@echo "This command is intended for maintainers to use;"
	-@echo "it deletes files that may require special tools to rebuild."
	-rm -f Makefile.in
