EXTRA_DIST = $(data_DATA)

datadir = $(XINE_SKINDIR)/CelomaMdk

data_DATA =                                                                                       \
	BigArrowDown.png   LettersMini.png     MainPlay.png	  PlBg.png	   SkArrowUp.png  \
	BigArrowUp.png	   MainAutoButton.png  MainPower.png	  PlBtn.png	   SkItemBtn.png  \
	CtlBg.png	   MainBg.png	       MainPrev.png	  PlDelete.png	   SkSlidBG.png   \
	CtlBtn.png	   MainButton.png      MainStop.png	  PlDeleteAll.png  SkSlidPad.png  \
	CtlDismiss.png	   MainDummy.png       MainVolumeBg.png   PlDismiss.png    SliderHBg.png  \
	CtlSliderBg.png    MainEject.png       MainVolumePad.png  PlInputTxt.png   SliderHPad.png \
	CtlSliderPad.png   MainFastB.png       MrlBg.png	  PlItemBtn.png    SliderVBg.png  \
	LettersBig.png	   MainFastF.png       MrlBtn.png	  PlMoveDn.png	   SliderVPad.png \
	LettersDigit.png   MainMute.png        MrlDismiss.png	  PlMoveUp.png	                  \
	LettersGrey.png    MainNext.png        MrlSelect.png	  PlPlay.png                      \
	LettersMiddle.png  MainPause.png       Onglet.png	  SkArrowDown.png  skinconfig


debug:
install-debug: install

mostlyclean-generic:
	-rm -f *~ \#* .*~ .\#*

maintainer-clean-generic:
	-@echo "This command is intended for maintainers to use;"
	-@echo "it deletes files that may require special tools to rebuild."
	-rm -f Makefile.in
