EXTRA_DIST = $(data_DATA)

datadir = $(XINE_SKINDIR)/cloudy

data_DATA = ComBox.png		MainBg.png	    MainPower.png	    MrlPlay.png		\
	ComDismiss.png		MainClose.png	    MainPrev.png	    MrlSelect.png	\
	ComLetters.png		MainCtlBtn.png	    MainSetup.png	    PlAdd.png		\
	ComScrollArrowDown.png	MainEject.png	    MainSliderBg.png	    PlBg.png		\
	ComScrollArrowUp.png	MainFullScreen.png  MainSliderPad.png	    PlDelete.png	\
	ComScrollBg.png		MainMrlBtn.png	    MainSmallArrowDown.png  PlDeleteAll.png	\
	ComScrollPad.png	MainMute.png	    MainSmallArrowUp.png    PlInputText.png	\
	CtlBg.png		MainNext.png	    MainSnapshot.png	    PlItem.png		\
	CtlSkinItem.png		MainPause.png	    MainStop.png	    PlMoveDown.png	\
	CtlSkinScrollBg.png	MainPlBtn.png	    MainVolumeBg.png	    PlMoveUp.png	\
	CtlSliderBg.png		MainPlay.png	    MainVolumePad.png	    PlPlay.png		\
	CtlSliderPad.png	MainPlayFast.png    MrlBg.png					\
	MainAutoButton.png	MainPlaySlow.png    MrlItem.png					\
	fatsolid.pcf.gz 	smooth.pcf.gz 	    fonts.dir \
	skinconfig



debug:
install-debug: install

mostlyclean-generic:
	-rm -f *~ \#* .*~ .\#*

maintainer-clean-generic:
	-@echo "This command is intended for maintainers to use;"
	-@echo "it deletes files that may require special tools to rebuild."
	-rm -f Makefile.in
