EXTRA_DIST = $(data_DATA)

datadir = $(XINE_SKINDIR)/lcd

data_DATA = arrowdn.png arrowup.png bg.png close.png eject.png fastb.png \
	fastf.png fullsc.png largebtn.png letters.png next.png pause.png \
	pl_bg.png pl_btn.png pl_itembtn.png pl_slidpad.png pl_slidv.png \
	play.png power.png prev.png ptdn.png ptup.png skip.png slider_bg.png \
	slider_pad.png smallbtn.png stop.png playlist.png setup.png \
	mrl.png pl_inputtxt.png pl_play.png pl_delete.png pl_deleteall.png \
	pl_moveup.png pl_movedown.png skinconfig

debug:
install-debug: install

mostlyclean-generic:
	-rm -f *~ \#* .*~ .\#*

maintainer-clean-generic:
	-@echo "This command is intended for maintainers to use;"
	-@echo "it deletes files that may require special tools to rebuild."
	-rm -f Makefile.in
