EXTRA_DIST = $(data_DATA)

datadir = $(XINE_SKINDIR)/metal

data_DATA = arrowdn.png arrowup.png arrowdn2.png arrowup2.png bg.png \
	button.png close.png eject.png exit.png fullsc.png largebtn.png \
	left.png letters.png next.png pause.png pl_bg.png pl_btn.png \
	pl_itembtn.png pl_slidpad.png pl_slidv.png play.png prev.png \
	right.png slider_bg.png slider_pad.png slider_v.png smallbtn.png \
	stop.png playlist.png setup.png mrl.png pl_play.png pl_delete.png \
	pl_deleteall.png pl_moveup.png pl_movedown.png pl_inputtxt.png \
	playslow.png playfast.png mrl_play.png mute.png cam.png sk_itembtn.png \
	sk_slidv.png skinconfig

debug:
install-debug: install

mostlyclean-generic:
	-rm -f *~ \#* .*~ .\#*

maintainer-clean-generic:
	-@echo "This command is intended for maintainers to use;"
	-@echo "it deletes files that may require special tools to rebuild."
	-rm -f Makefile.in
